--- a/sistema-biblioteca-api/SistemaBibliotecaAPI.csproj
+++ b/sistema-biblioteca-api/SistemaBibliotecaAPI.csproj
@@ -1,22 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>SistemaBibliotecaAPI</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<RootNamespace>SistemaBibliotecaAPI</RootNamespace>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="Models\TipoCliente.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="Models\TipoCliente.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ACBaseAPI" Version="9.6.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
-  </ItemGroup>
+	<ItemGroup>
+		<InternalsVisibleTo Include="SistemaBiblioteca.Tests" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="ACBaseAPI" Version="2.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+	</ItemGroup>
 
 </Project>
